--- a/test.html
+++ b/test.html
@@ -5,32 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .child {
+            
+            background-color: red;
+        }
+        .parent {
+            display: table-cell;
+            background-color: yellow;
+            vertical-align: center;
+        }
+    </style>
 </head>
 
 <body>
-    <script>
-        var n = 10;
-        function fn(){
-            var n = 20;
-            function f(){
-                n++;
-                console.log(n);
-            }
-            f();
-            return f;
-        }
-        var x = fn();
-        x();
-        x();
-        console.log(n);
-        /* //全局
-        var n = 10;
-        var x = 00xxx1;
-        //局部
-        var n = 20;
-        00xxx2(); */
-        //21,22,23,10
-    </script>
+    <div class="parent">
+        <div class="child">
+            子元素
+        </div>
+    </div>
 </body>
 
 </html>
