闭包内地址的修改

--- a/test.html
+++ b/test.html
@@ -6,23 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .child {
-            
-            background-color: red;
-        }
         .parent {
-            display: table-cell;
-            background-color: yellow;
-            vertical-align: center;
+            text-align: center;
+            background-color: #fff;
+        }
+        .child {
+            display: inline-block;
+            
         }
     </style>
 </head>
 
 <body>
     <div class="parent">
-        <div class="child">
-            子元素
-        </div>
+        <div class="child">子元素</div>
     </div>
 </body>
 
